tests/invalid/07_op_invalido.patito
programa opMalo;
vars
    x : entero;
inicio
{
    x = 2 ** 3;
}
fin
